# trec24-biogen

./: .gitignore  .template.env  Dockerfile  README.md  TODO.md  config.toml  dockerfile  pyproject.toml  ray-runtime-env.yml  trec-description.md  webis-spark-submit
.github/workflows/: ci.yml
data/: .gitignore
notebooks/: generation.ipynb  retrieval.ipynb
scripts/: download_pubmed_fulltexts.py
trec_biogen/: __init__.py  __main__.py  answering.py  cli.py  datasets.py  dspy_generation.py  elasticsearch.py  elasticsearch_pyterrier.py  evaluation.py  generation.py  language_models.py  model.py  modules.py  optimization.py  pipelines.py  pubmed.py  pubmed_full_text.py  pubmed_fulltexts.py  pyterrier.py  pyterrier_pubmed.py  pyterrier_query.py  retrieval.py  trec_submissions.py
trec_biogen/jobs/: index_pubmed_full_text.py  index_pubmed_trec_ids.py
