[project]
name = "trec-biogen"
authors = [
    {name = "Jan Heinrich Reimer", email = "heinrich.reimer@uni-jena.de"},
]
description = "Webis at TREC 2024 BioGen."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiohttp~=3.9",
    "annotated-types~=0.7.0",
    "certifi~=2024.7",
    "cyclopts~=2.9",
    "dspy-ai~=2.4.13",
    "elasticsearch7~=7.17",
    "elasticsearch7-dsl~=7.3",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "en_core_sci_sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz",
    "jupyter~=1.0",
    "more-itertools~=10.3",
    "optuna~=3.6",
    "pandas~=2.0",
    "pyarrow~=17.0",
    "pydantic[email]~=2.5",
    "pypdf~=4.2",
    "python-dotenv~=1.0",
    "python-terrier~=0.11.0",
    "ragas~=0.1.15",
    "ray[default,data]~=2.32.0",
    "ray-elasticsearch~=0.2.2",
    "scikit-learn~=1.5",
    "spacy~=3.7",
    "tqdm~=4.64",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "bandit[toml]~=1.7",
    "mypy~=1.5",
    "pandas-stubs~=2.0",
    "pyarrow-stubs~=10.0",
    "pytest~=8.0",
    "pytest-cov~=5.0",
    "ruff~=0.6.1",
    "types-tqdm~=4.66",
]

[project.urls]
"Homepage" = "https://github.com/heinrichreimer/trec-biogen"
"Bug Tracker" = "https://github.com/heinrichreimer/trec-biogen/issues"

[project.scripts]
trec-biogen = "trec_biogen.cli:app"

[build-system]
requires = [
    "setuptools~=69.0",
    "setuptools-scm~=8.0",    
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
    "scripts",  # FIXME: Include again, after fixing the issues.
]

[tool.mypy]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
    "scripts",  # FIXME: Include again, after fixing the issues.
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    "notebooks",
    "data",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"
filterwarnings = [
    'ignore:FUNCTIONS is deprecated and will be removed in future versions:DeprecationWarning',
]
