[project]
name = "trec-biogen"
authors = [
    {name = "Jan Heinrich Merker", email = "heinrich.merker@uni-jena.de"},
]
description = "Webis at TREC 2024 BioGen."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "aiohttp~=3.9",
    "annotated-types~=0.7.0",
    "certifi~=2025.1",
    "cyclopts~=3.0",
    "dspy-ai~=2.6.15",
    "elasticsearch7~=7.17",
    "elasticsearch7-dsl~=7.3",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
    "en_core_sci_sm @ https://s3-us-west-2.amazonaws.com/ai2-s2-scispacy/releases/v0.5.4/en_core_sci_sm-0.5.4.tar.gz",
    "ir-measures~=0.3.3",
    "joblib~=1.4",
    "jupyter~=1.0",
    "more-itertools~=10.3",
    "optuna~=4.0",
    "optuna-integration~=4.0",
    "pandas~=2.0",
    "pyarrow~=20.0",
    "pydantic[email]~=2.5",
    "pypdf~=5.0",
    "pyterrier-dr @ git+https://github.com/terrierteam/pyterrier_dr.git@123a5d0e76824b275bad910f76547b811baebebb",
    "pyterrier-t5 @ git+https://github.com/terrierteam/pyterrier_t5.git@679e3320b0f7c997de108bc44f66ef15fba72f08",
    "python-dotenv~=1.0",
    "python-terrier~=0.13.0",
    "ragas~=0.1.15",
    "ray[default,data]~=2.46.0",
    "ray-elasticsearch~=1.0.0",
    "rouge-score~=0.1.2",
    "scikit-learn~=1.5",
    "spacy~=3.7",
    "tqdm~=4.64",
    "wandb~=0.19.7",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "bandit[toml]~=1.7",
    "mypy~=1.5",
    "pandas-stubs~=2.0",
    "pyarrow-stubs~=10.0",
    "pytest~=8.0",
    "pytest-cov~=6.0",
    "ruff~=0.11.2",
    "types-tqdm~=4.66",
]

[project.urls]
"Homepage" = "https://github.com/webis-de/trec24-biogen"
"Bug Tracker" = "https://github.com/webis-de/trec24-biogen/issues"

[project.scripts]
trec-biogen = "trec_biogen.cli:app"

[build-system]
requires = [
    "setuptools~=80.0",
    "setuptools-scm~=9.2",    
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
]

[tool.setuptools_scm]

[tool.ruff]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
    "scripts",  # FIXME: Include again, after fixing the issues.
]

[tool.mypy]
exclude = [
    "build",
    "venv",
    "notebooks",
    "data",
    "scripts",  # FIXME: Include again, after fixing the issues.
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [
    "build",
    "venv",
    "notebooks",
    "data",
]

[tool.bandit.assert_used]
skips = ["**/test_*.py"]

[tool.pytest.ini_options]
log_cli = "True"
filterwarnings = [
    'ignore:FUNCTIONS is deprecated and will be removed in future versions:DeprecationWarning',
]
